Committing several changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="light_blue_400">#29B6F6</string>
     <string name="cyan_400">#26C6DA</string>
     <string name="teal_400">#26A69A</string>
-    <string name="green_400">#66BB6</string>
+    <string name="green_400">#66BB6A</string>
     <string name="light_green_400">#9CCC65</string>
     <string name="lime_400">#D4E157</string>
     <string name="yellow_400">#FFEE58</string>
