--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,5 +67,6 @@
     <string name="orange_400">#FFA726</string>
     <string name="deep_orange_400">#FF7043</string>
     <string name="title_activity_add">AddActivity</string>
+    <string name="price">Price</string>
 
 </resources>
